test_regress/t/t_semaphore_bad.out
%Error: t/t_semaphore_bad.v:8:4: Can't find typedef: 'semaphore'
    8 |    semaphore s;
      |    ^~~~~~~~~
%Error: Exiting due to
